# brainstate

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  changelog.md  codecov.yml  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: CI-daily.yml  CI.yml  Publish.yml  deploy-docs.yml
benchmark/: COBA_2005.py  CUBA_2005.py
benckmark/: COBA_2005.py  CUBA_2005.py
brainstate/: __init__.py  _compatible_import.py  _compatible_import_test.py  _conftest_test.py  _deprecation.py  _deprecation_module_test.py  _deprecation_test.py  _deprecation_v2_test.py  _error.py  _error_test.py  _py_typed_test.py  _state.py  _state_global_hooks.py  _state_global_hooks_test.py  _state_hook_context.py  _state_hook_context_test.py  _state_hook_core.py  _state_hook_core_test.py  _state_hook_manager.py  _state_hook_manager_test.py  _state_hooks_test.py  _state_test.py  _state_thread_safety_test.py  _testing.py  _testing_test.py  _typing_static_check.py  _utils.py  _version.py  conftest.py  environ.py  environ_test.py  mixin.py  mixin_test.py  surrogate.py  surrogate_test.py  transform.py  typing.py  typing_test.py
brainstate/augment/: __init__.py  _autograd.py  _autograd_test.py  _eval_shape.py  _eval_shape_test.py  _mapping.py  _mapping_test.py  _random.py  _unvmap.py
brainstate/compile/: __init__.py  _ad_checkpoint.py  _ad_checkpoint_test.py  _conditions.py  _conditions_test.py  _error_if.py  _error_if_test.py  _jit.py  _jit_test.py  _loop_collect_return.py  _loop_collect_return_test.py  _loop_no_collection.py  _loop_no_collection_test.py  _make_jaxpr.py  _make_jaxpr_test.py  _progress_bar.py  _unvmap.py  _util.py
brainstate/event/: __init__.py  _array.py  _block_csr_spmm.py  _block_csr_spmm_benchmark.py  _block_ell_spmm.py  _block_ell_spmm_benchmark.py  _csr.py  _csr_mv.py  _csr_mv_test.py  _csr_test.py  _event_data.py  _fixed_probability.py  _fixed_probability_benchmark.py  _fixed_probability_test.py  _fixedprob_mv.py  _fixedprob_mv_benchmark.py  _fixedprob_mv_test.py  _linear.py  _linear_benckmark.py  _linear_mv.py  _linear_mv_benckmark.py  _linear_mv_test.py  _linear_test.py  _misc.py  _xla_custom_op.py  _xla_custom_op_numba.py  _xla_custom_op_numba_test.py  _xla_custom_op_pallas.py  _xla_custom_op_test.py  _xla_custom_op_warp.py  _xla_custom_op_warp_test.py
brainstate/experimental/: __init__.py  _cpu.py  _export.py  _gdiist_bpu.py  _gdiist_bpu_test.py  _gpu.py  _impl.py  _main.py  _tpu.py  _wrapper.py  export.py
brainstate/functional/: _activations.py  _activations_test.py  _normalization.py  _others.py  _spikes.py
brainstate/graph/: __init__.py  _caller.py  _classify_test.py  _context.py  _context_test.py  _convert.py  _convert_test.py  _engine_test.py  _flatten.py  (+17 more)
docs/: Makefile  api.rst  auto_generater.py  changelog.md  collective_operations-en.ipynb  concepts-en.ipynb  conf.py  convolution_layers-en.ipynb  highlight_test_lexer.py  index.rst  program_augmentation-en.ipynb  program_augmentation-zh.ipynb  program_compilation-en.ipynb  program_compilation-zh.ipynb  pygraph-zh.ipynb  random_numbers-zh.ipynb  random_numbers.ipynb  state-zh.ipynb  state.ipynb
examples/: 001_functional_api.py  002_lifted_transforms.py  003_vae.py  004_scan_over_layers.py  005_save_load_checkpoints.py  006_fsdp_and_optimizer.py  007_parameter_surgery.py  008_cnn.py  009_sofo_mnist.py  010_mnist_fwd_grad.py  011_debug_nan_gradient.py  012_shard_map_spmd.py  013_vjp_reverse_mode.py  014_jvp_forward_mode.py  015_vmap2_stateful_vectorization.py  01_functional_api.py  100_hh_neuron_model.py  101_cann_1d_oscillatory_tracking.py  102_EI_net_1996.py  103_COBA_2005.py  104_CUBA_2005.py  104_CUBA_2005_version2.py  105_COBA_HH_2007.py  105_COBA_HH_2007_braincell.py  106_COBA_HH_2007.py  107_gamma_oscillation_1996.py  108_synfire_chains_199.py  109_fast_global_oscillation.py  110_Susin_Destexhe_2021_gamma_oscillation_AI.py  111_Susin_Destexhe_2021_gamma_oscillation_CHING.py  112_Susin_Destexhe_2021_gamma_oscillation_ING.py  113_Susin_Destexhe_2021_gamma_oscillation_PING.py  200_surrogate_grad_lif.py  201_surrogate_grad_lif_fashion_mnist.py  202_mnist_lif_readout.py  203_brainscale_for_snns.py  203_braintrace_for_snns.py  300_integrator_rnn.py  301_brainscale_for_rnns.py  301_braintrace_for_rnns.py  (+5 more)
(+573 files in other folders)
