[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
exclude = [
    "docs*",
    "tests*",
    "examples*",
    "experiments*",
    "benchmark*",
    "build*",
    "dist*",
    "dev*",
    "brainstate.egg-info*",
    "brainstate/__pycache__*",
    "brainstate/__init__.py",
]

[tool.setuptools.package-data]
brainstate = ["py.typed"]

[project]
name = "brainstate"
description = "A State-based Transformation System for Brain Modeling."
readme = 'README.md'
requires-python = '>=3.11'
authors = [{ name = 'BrainState Developers', email = 'chao.brain@qq.com' }]
classifiers = [
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
]


keywords = [
    'computational neuroscience',
    'brain-inspired computing',
    'brain simulation',
    'brain modeling',
    'spiking neural networks',
]

dependencies = [
    'numpy>=1.15',
    'tqdm',
    'brainunit',
    'brainevent',
]

dynamic = ['version']

[tool.setuptools.dynamic]
version = { attr = "brainstate._version.__version__" }

[project.urls]
homepage = 'https://github.com/chaobrain/brainstate'
repository = 'https://github.com/chaobrain/brainstate'
"Documentation" = "https://brainx.chaobrain.com/brainstate/"
"Source Code" = "https://github.com/chaobrain/brainstate"
"Bug Tracker" = "https://github.com/chaobrain/brainstate/issues"

[project.optional-dependencies]
cpu = [
    'jax[cpu]>=0.6.0',
    'brainunit',
    'brainevent',
]
cuda12 = [
    'jax[cuda12]>=0.6.0',
    'brainunit',
    'brainevent',
]
cuda13 = [
    'jax[cuda13]>=0.6.0',
    'brainunit',
    'brainevent',
]
tpu = [
    'jax[tpu]>=0.6.0',
    'brainunit',
    'brainevent',
]
testing = [
    'absl-py',
    'pytest',
    'coverage',
    'jax>=0.6.0',
    'brainunit',
    'brainevent',
]


[tool.mypy]
python_version = "3.11"
files = ["brainstate"]
exclude = ['.*_test\.py$']
warn_redundant_casts = true
no_implicit_optional = true
# Gradual baseline: do not fail on un-annotated internals yet.
disallow_untyped_defs = false
ignore_missing_imports = false
follow_imports = "normal"
# NOTE: `warn_unused_configs` is intentionally omitted -- it spuriously fails on
# third-party override patterns (e.g. jaxlib/tqdm/braintools) that brainstate
# does not import directly.

# --- Not-yet-typed modules: suppress errors (the ratchet frontier). ---
# To "finish" a module, add a stricter concrete override in the ratchet block
# below; a concrete module pattern takes precedence over this wildcard.
[[tool.mypy.overrides]]
module = ["brainstate.*"]
ignore_errors = true

# --- Third-party libraries with missing/partial type information. ---
[[tool.mypy.overrides]]
module = ["jax.*", "jaxlib.*", "numpy.*", "brainunit.*", "brainevent.*", "tqdm.*", "braintools.*"]
ignore_missing_imports = true

# ======================================================================
# RATCHET: fully-typed modules, enforced strictly. Append modules here as
# each is completed. Keep this list sorted for easy review.
# ======================================================================
[[tool.mypy.overrides]]
module = [
    "brainstate._typing_static_check",
    "brainstate.typing",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["brainstate"]
addopts = "-ra"
markers = [
    "slow: marks tests as slow (deselected by default; run with --run-slow)",
]

[tool.coverage.run]
source = ["brainstate"]
branch = true
omit = [
    "*/*_test.py",
    "*/test_*.py",
    "brainstate/_version.py",
    "brainstate/conftest.py",
    "brainstate/_testing.py",
    "brainstate/experimental/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
